--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="form-group">
                 <button type="submit" class="cta-button">Crear Cuenta</button>
             </div>
-        </form>
+        </form action="https://javier330.github.io/Registro.html/" method="POST" id="registro-form">
         <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
     </div>
 </section>
